--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/login.css">
+    <link rel="stylesheet" href="/styles/login.css">
     <script src="https://kit.fontawesome.com/8945ba6e2e.js" crossorigin="anonymous"></script>
 </head>
 
