se agrega el product detail por david diaz

--- a/views/productCart.html
+++ b/views/productCart.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!--link css-->
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="/styles/productCart.css">
     <!--caja de iconos--> 
     <link href="stylesheet" rel="stylesheet">
 </head>
