--- a/views/register.html
+++ b/views/register.html
@@ -6,14 +6,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario Register</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:wght@300&family=Roboto:wght@100;400&family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/register.css">
     <script src="https://kit.fontawesome.com/8945ba6e2e.js" crossorigin="anonymous"></script>
 </head>
 
+<header>
+    <!--------- BARRA NAVEGADOR DESKTOP ---------->
+    <div class="interior">
+        <a href="/" class="logo-header-desk1" target="blank">
+            <img src="https://i.postimg.cc/7YbJJNCj/logo-negro.jpg" alt="Logo">
+        </a>
+        <div class="container-busqueda">
+            <input class="bar-busqueda" type="text" placeholder="Buscar">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            
+        </div>
+        <nav class="navegacion">
+            <ul>
+                <li>
+                    <a href="register.html" target="blank">Registrate
+                    <i class="fa-solid fa-id-card"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="login.html" target="blank">Iniciar Sesion
+                    <i class="fa-solid fa-user"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="productCart.html" target="blank">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="interior2">
+        <nav class="navegacion2">
+            <ul>
+                <li>
+                    <a href="" target="blank">Hombres</a>
+                </li>
+                <li>
+                    <a href="" target="blank">Mujeres</a>
+                </li>
+                <li>
+                    <a href="" target="blank">Niños</a>
+                </li>
+                <li class="submenu">
+                    <a href="" target="blank">Productos</a>
+                    <ul class="hijos">
+                        <li><a href="">Reebok</a></li>
+                        <li><a href="">Adidas</a></li>
+                        <li><a href="">Nike</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
 <body>
     <main class="main">
-        <img class="logo" src="https://i.postimg.cc/yxqy1x1f/logo.png" alt="">
-        <form class="container" action="/register" method="POST">
+        <a href="/">
+            <img class="logo" src="https://i.postimg.cc/yxqy1x1f/logo.png" alt="logo-reeadni">
+        </a>        
+        <form class="container" action="/" method="POST">
             <h1 class="title">Suscríbete</h1>
             <input class="campo" type="text" placeholder="Nombres">
             <input class="campo" type="text" placeholder="Apellidos">
