Se agrega el header a carrito de compras y detalles de producto

--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:wght@300&family=Roboto:wght@100;400&family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:wght@300&family=Roboto:wght@100;400&family=Rubik+Marker+Hatch&display=swap"
+        rel="stylesheet">
     <link href="styles/index.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" rel="stylesheet">
     <!-- libreria de slider movil -->
@@ -58,18 +60,18 @@
             <div class="container-busqueda">
                 <input class="bar-busqueda" type="text" placeholder="Buscar">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                
+
             </div>
             <nav class="navegacion">
                 <ul>
                     <li>
                         <a href="register.html" target="blank">Registrate
-                        <i class="fa-solid fa-id-card"></i>
+                            <i class="fa-solid fa-id-card"></i>
                         </a>
                     </li>
                     <li>
                         <a href="login.html" target="blank">Iniciar Sesion
-                        <i class="fa-solid fa-user"></i>
+                            <i class="fa-solid fa-user"></i>
                         </a>
                     </li>
                     <li>
@@ -94,7 +96,7 @@
                         <a href="" target="blank">Niños</a>
                     </li>
                     <li class="submenu">
-                        <a href="" target="blank">Productos</a>
+                        <a href="productDetail.html" target="blank">Productos</a>
                         <ul class="hijos">
                             <li><a href="">Reebok</a></li>
                             <li><a href="">Adidas</a></li>
@@ -104,7 +106,8 @@
                 </ul>
             </nav>
         </div>
-            
+
+
         <!-----------  SECCION 1 CARDS DE HOMBRE - MUJER - NIÑOS ------------------------>
         <section class="content-section-genero">
             <h1 class="titulo-compra">¿Para Quién Compras?</h1>
@@ -249,20 +252,21 @@
             <h1>COMPARTE TUS LOOKS</h1>
             <h2>Forma parte de la comunidad Reeadni</h2>
             <p>Mencionanos en tus fotos de instagram y facebook con <span>@Reeadni</span> y usar el hashtag
-            <span>#lookReeadni</span><p>            
+                <span>#lookReeadni</span>
+            <p>
         </div>
-    <!------------------ SLIDER MOVIL ----------------------->
+        <!------------------ SLIDER MOVIL ----------------------->
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="https://i.postimg.cc/vZLBRwCB/1.jpg"></div>
-            <div class="swiper-slide"><img src="https://i.postimg.cc/HL6kx4Y1/2.jpg"></div>
-            <div class="swiper-slide"><img src="https://i.postimg.cc/13ZtY3C2/3.jpg"></div>
-            <div class="swiper-slide"><img src="https://i.postimg.cc/26XyHdM7/4.jpg"></div>
-            <div class="swiper-slide"><img src="https://i.postimg.cc/QC2tD8XB/5.jpg"></div>
-            <div class="swiper-slide"><img src="https://i.postimg.cc/hPmvrdrV/6.jpg"></div>
-            <div class="swiper-slide"><img src="https://i.postimg.cc/5yY0DYMd/7.jpg"></div>
-            <div class="swiper-slide"><img src="https://i.postimg.cc/gcQr8DvY/8.jpg"></div>
-            <div class="swiper-slide"><img src="https://i.postimg.cc/vmYmbSdv/9.webp"></div>
+                <div class="swiper-slide"><img src="https://i.postimg.cc/vZLBRwCB/1.jpg"></div>
+                <div class="swiper-slide"><img src="https://i.postimg.cc/HL6kx4Y1/2.jpg"></div>
+                <div class="swiper-slide"><img src="https://i.postimg.cc/13ZtY3C2/3.jpg"></div>
+                <div class="swiper-slide"><img src="https://i.postimg.cc/26XyHdM7/4.jpg"></div>
+                <div class="swiper-slide"><img src="https://i.postimg.cc/QC2tD8XB/5.jpg"></div>
+                <div class="swiper-slide"><img src="https://i.postimg.cc/hPmvrdrV/6.jpg"></div>
+                <div class="swiper-slide"><img src="https://i.postimg.cc/5yY0DYMd/7.jpg"></div>
+                <div class="swiper-slide"><img src="https://i.postimg.cc/gcQr8DvY/8.jpg"></div>
+                <div class="swiper-slide"><img src="https://i.postimg.cc/vmYmbSdv/9.webp"></div>
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
@@ -491,46 +495,46 @@
         </div>
     </section>
     <!----------------------SlideBar Infinito--------------------->
-        <div class="slider-infinito">
-            <div class="slider-track">
-                <div class="slider-logos">
-                    <img src="https://i.postimg.cc/7YbJJNCj/logo-negro.jpg" alt="logo-reeadni">
-                </div>
-                <div class="slider-logos">
-                    <img src="https://i.postimg.cc/Dzz9rxLk/logo-reebok.png" alt="logo-reebok">
-                </div>
-                <div class="slider-logos">
-                    <img src="https://i.postimg.cc/Dw7kZvzz/logo-adidas.jpg" alt="logo-adidas">
-                </div>
-                <div class="slider-logos">
-                    <img src="https://i.postimg.cc/dt2cwkwX/logo-nike.png" alt="logo-nike">
-                </div>
-                <div class="slider-logos">
-                    <img src="https://i.postimg.cc/7YbJJNCj/logo-negro.jpg" alt="logo-reeadni">
-                </div>
-                <div class="slider-logos">
-                    <img src="https://i.postimg.cc/Dzz9rxLk/logo-reebok.png" alt="logo-reebok">
-                </div>
-                <div class="slider-logos">
-                    <img src="https://i.postimg.cc/Dw7kZvzz/logo-adidas.jpg" alt="logo-adidas">
-                </div>
-                <div class="slider-logos">
-                    <img src="https://i.postimg.cc/dt2cwkwX/logo-nike.png" alt="logo-nike">
-                </div>
-                <div class="slider-logos">
-                    <img src="https://i.postimg.cc/7YbJJNCj/logo-negro.jpg" alt="logo-reeadni">
-                </div>
-                <div class="slider-logos">
-                    <img src="https://i.postimg.cc/Dzz9rxLk/logo-reebok.png" alt="logo-reebok">
-                </div>
-                <div class="slider-logos">
-                    <img src="https://i.postimg.cc/Dw7kZvzz/logo-adidas.jpg" alt="logo-adidas">
-                </div>
-                <div class="slider-logos">
-                    <img src="https://i.postimg.cc/dt2cwkwX/logo-nike.png" alt="logo-nike">
-                </div>
+    <div class="slider-infinito">
+        <div class="slider-track">
+            <div class="slider-logos">
+                <img src="https://i.postimg.cc/7YbJJNCj/logo-negro.jpg" alt="logo-reeadni">
+            </div>
+            <div class="slider-logos">
+                <img src="https://i.postimg.cc/Dzz9rxLk/logo-reebok.png" alt="logo-reebok">
+            </div>
+            <div class="slider-logos">
+                <img src="https://i.postimg.cc/Dw7kZvzz/logo-adidas.jpg" alt="logo-adidas">
+            </div>
+            <div class="slider-logos">
+                <img src="https://i.postimg.cc/dt2cwkwX/logo-nike.png" alt="logo-nike">
+            </div>
+            <div class="slider-logos">
+                <img src="https://i.postimg.cc/7YbJJNCj/logo-negro.jpg" alt="logo-reeadni">
+            </div>
+            <div class="slider-logos">
+                <img src="https://i.postimg.cc/Dzz9rxLk/logo-reebok.png" alt="logo-reebok">
+            </div>
+            <div class="slider-logos">
+                <img src="https://i.postimg.cc/Dw7kZvzz/logo-adidas.jpg" alt="logo-adidas">
+            </div>
+            <div class="slider-logos">
+                <img src="https://i.postimg.cc/dt2cwkwX/logo-nike.png" alt="logo-nike">
+            </div>
+            <div class="slider-logos">
+                <img src="https://i.postimg.cc/7YbJJNCj/logo-negro.jpg" alt="logo-reeadni">
+            </div>
+            <div class="slider-logos">
+                <img src="https://i.postimg.cc/Dzz9rxLk/logo-reebok.png" alt="logo-reebok">
+            </div>
+            <div class="slider-logos">
+                <img src="https://i.postimg.cc/Dw7kZvzz/logo-adidas.jpg" alt="logo-adidas">
+            </div>
+            <div class="slider-logos">
+                <img src="https://i.postimg.cc/dt2cwkwX/logo-nike.png" alt="logo-nike">
             </div>
         </div>
+    </div>
     <!---------------- Termina slideBar-Infinito------------------------->
     </main>
     <footer class="container-footer">
@@ -565,4 +569,5 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="/slider.js"></script>
 </body>
+
 </html>
