--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -5,6 +5,10 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:wght@300&family=Roboto:wght@100;400&family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
+   <link href="styles/header.css" rel="stylesheet">
    <link href="/styles/productDetail.css" rel="stylesheet">
    <link href="styles/normalize.css" rel="stylesheet">
    <title>Document</title>
@@ -12,15 +16,62 @@
 
 <body>
    <header>
-      <div class="navegador-inicio">
-         <nav>
-            <a class="a" href="#"> Atrás </a>
-            <a class="a" href="#"> Inicio </a>
-            <a class="a" href="#"> /Calzado</a>
-            <a class="a" href="#"> /Hombre </a>
+      <div class="interior">
+         <a href="" class="logo-header-desk1" target="blank" action="/" method="post">
+            <img src="https://i.postimg.cc/7YbJJNCj/logo-negro.jpg" alt="Logo">
+         </a>
+         <div class="container-busqueda">
+            <input class="bar-busqueda" type="text" placeholder="Buscar">
+            <i class="fa-solid fa-magnifying-glass"></i>
+
+         </div>
+         <nav class="navegacion">
+            <ul>
+               <li>
+                  <a href="register.html" target="blank">Registrate
+                     <i class="fa-solid fa-id-card"></i>
+                  </a>
+               </li>
+               <li>
+                  <a href="login.html" target="blank">Iniciar Sesion
+                     <i class="fa-solid fa-user"></i>
+                  </a>
+               </li>
+               <li>
+                  <a href="productCart.html" target="blank">
+                     <i class="fa-solid fa-cart-shopping"></i>
+                  </a>
+               </li>
+            </ul>
          </nav>
       </div>
 
+      <div class="interior2">
+         <nav class="navegacion2">
+            <ul>
+               <li>
+                  <a href="" target="blank">Hombres</a>
+               </li>
+               <li>
+                  <a href="" target="blank">Mujeres</a>
+               </li>
+               <li>
+                  <a href="" target="blank">Niños</a>
+               </li>
+               <li class="submenu">
+                  <a href="productDetail.html" target="blank">Productos</a>
+                  <ul class="hijos">
+                     <li><a href="">Reebok</a></li>
+                     <li><a href="">Adidas</a></li>
+                     <li><a href="">Nike</a></li>
+                  </ul>
+               </li>
+            </ul>
+         </nav>
+      </div>
+   </header>
+
+   <section class="calzado-zapatos">
       <div class="texto-calzado">
          <h1> CALZADO Y ZAPATOS PARA HOMBRE </h1>
       </div>
@@ -41,7 +92,7 @@
             <a class="a2" href="#"> Zx </a>
             <a class="a2" href="#"> Outlet </a>
       </div>
-   </header>
+   </section>
 
    <main class="container">
       <div class="banner">
