--- a/public/styles/productCart.css
+++ b/public/styles/productCart.css
@@ -10,11 +10,21 @@
     list-style:none;
     text-decoration: none;
 }
+
 :root {
     --main-color: #fd4646;
     --text-color: #171427;
     --bg--color: #fff;
+    --texto-principal: 'Roboto', sans-serif;
+    --texto-segundario: 'Open Sans', sans-serif;
+    --texto-comentarios: 'Indie Flower', cursive;
+    --texto-tituloComentarios: 'Rubik Marker Hatch', cursive;;
+    --color-fondo: #ffffff;
+    --color-grisTenue: #f5f5f5;
+    --color-gris: #7e7e7e;
+    --color-oscuro: #111111;
 }
+
 img {
     width: 100%;
 }
@@ -36,8 +46,8 @@ body {
 }*/
 /*header*/
 header {
-    position: fixed;
-    top: 0;
+    /* position: fixed;
+    top: 0; */
     left: 0;
     width: 100%;
     background: var(--bg-color);
@@ -73,6 +83,7 @@ header {
     top: 0;
     right: 0;
     width: 35%;
+    margin-top: 134px;
     min-height: 100vh;
     padding: 20px;
     background: var(--bg--color);
@@ -82,17 +93,17 @@ header {
 }
 
 .cart-content{
-    margin: 5px;
+    margin: 1rem .5rem .6rem .5rem;
     display: inline-block;
     width: 100%;
 }
 
 
 .cart-title{
+    font-family: var(--texto-tituloComentarios);
     text-align: center;
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin-top: 2rem;
+    font-size: 2rem;
+    margin-top: .5rem;
 }
 
 .cart-box{
@@ -192,19 +203,17 @@ header {
 /* Productos */
 
 .section-title{
-    font-size: 1.5rem;
-    font-weight: 600;
+    font-family: var(--texto-tituloComentarios);
+    font-size: 2rem;
     text-align: center;
     margin-bottom: 1.5rem;
-}
-.shop{
-    margin-top: 2rem;
 }
 
 .shop-container{
     display: block;
     width: 63%;
     margin-left: 15px;
+    margin-top: 3rem;
 }
 
 /* Shop Content */
@@ -216,7 +225,7 @@ header {
 
 }
 .product-box {
-    position: relative;
+    /* position:relative; */
     width: 100%;
     background-color: white;
 }
@@ -241,6 +250,7 @@ header {
     transition: 0.4s;
     background-color: rgb(144, 236, 152);
 }
+
 .product-img{
     width: 100%;
     height: 290px;
@@ -276,7 +286,7 @@ header {
 
 .btn-borrar{
     display: flex;
-    margin: 0 74% 0 auto;
+    margin: 0.50% 0 auto;
     border-color: black;
     background-color: white;
     font-size: 1rem;
