--- a/public/styles/productDetail.css
+++ b/public/styles/productDetail.css
@@ -1,4 +1,3 @@
-
 :root {  
     --primary-color: #eac926;
     --color-azul: #03264c;
@@ -12,26 +11,21 @@
     --precios-texto: 1.8rem;
     --descuentos-texto: 1.6rem;
     --descripciones-texto: 1.6rem;
-
-    
+    --texto-principal: 'Roboto', sans-serif;
+    --texto-segundario: 'Open Sans', sans-serif;
+    --texto-comentarios: 'Indie Flower', cursive;
+    --texto-tituloComentarios: 'Rubik Marker Hatch', cursive;;
+    --color-fondo: #ffffff;
+    --color-grisTenue: #f5f5f5;
+    --color-gris: #7e7e7e;
+    --color-oscuro: #111111;    
 }  
-
 
 /*para q no se añada el padding y el border de mas y no genere scroll*/
 * {
-   
     box-sizing: border-box;     
     padding: 0;
     margin: 0;
-}
-
-
-/* //navegador de inicio estilos// */
-
-.navegador-inicio {
-    width: 100%;
-    margin: auto;
-    font-size: var(--cuerpo-texto);
 }
 
 .a{
@@ -46,30 +40,21 @@ text-decoration: underline;
 
 }
 .a2 {
-       text-decoration: none;
-       color:#666;
-       font-size: var(--family);
-       margin-left: 2%;
+    text-decoration: none;
+    color:#666;
+    font-size: var(--family);
+    margin-left: 2%;
 }
 
 .a2:hover {
     text-decoration: underline;
 }
 
-header{
+.calzado-zapatos{
     width: 100%;
     height: 100%;
-    padding-top:4.0rem;
     margin: 0 auto;
-background-color:white;
-
-}
-
-body {
-    margin: 15px;
-    background-color: rgb(243, 245, 247);
-
-
+    background-color:white;
 }
 
 .navbar-final{
@@ -77,28 +62,23 @@ body {
     padding-bottom: 15px;
     flex-direction: row;
     color: black;
-    
-}
- 
+} 
 
 
 .texto-calzado {
-   font-style: italic;
-   font: 24px;
-   font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+    font: 24px;
+    font-family: Arial, Helvetica, sans-serif;
     margin-top: 1.5rem;
     margin-left: 2%;
-
 }
 
 .texto-catálogo {
     padding-bottom: 3%;
     opacity: 0.7;
-font-size: var(--family);
-margin-left: 2%;
-
+    font-size: var(--family);
+    margin-left: 2%;
 }
-
 
 .banner{
     width: 100%;
@@ -110,8 +90,6 @@ margin-left: 2%;
     
 }
 
-
-
 .section-container{
     display: flex;
     width: 100%;
@@ -121,108 +99,96 @@ margin-left: 2%;
     margin-top: 20px;
     }
 
-   
-  
+.imageproducto{
+    width: 80%;
+    border: solid 1px black;
+    border-radius: 8px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.15);
+}
 
-
-    
-
-    .imageproducto{
-        width: 80%;
-        border: solid 1px black;
-        border-radius: 8px;
-        box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.15);
-    
-    }
-
-    .imageproducto img{
-        width: 100%; 
-        
-    }
+.imageproducto img{
+    width: 100%; 
+}
 
 /* // efectos en las cardas // */
 
 .imageproducto:hover{
     transform: scale(1.1);
-
 }
 
-  .textoprecio{
+.textoprecio{
     padding: 10% 1% 10%;
-  }
+}
 
 
-   .card{
+.card{
     text-decoration: none;
     color: black;
     font-family: sans-serif;
     font-size: 1rem;
-   }
- 
-   
+}
+
 .card:hover{
-     text-decoration: underline;
-     
+    text-decoration: underline;
 }
 
 .addcar{
- background-color: #39b54a;
- padding: 2px 6px;
- color: #ebebeb;
- border-radius: 7px;
- box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.15);
- margin:3px 
+    background-color: #39b54a;
+    padding: 2px 6px;
+    color: #ebebeb;
+    border-radius: 7px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.15);
+    margin:3px 
 }
 
 .addvista{
-background-color: #1259c3;
-padding: 2px 6px;
-color: #ebebeb;
-border-radius: 7px;
- box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.15);
-margin:3px 
+    background-color: #1259c3;
+    padding: 2px 6px;
+    color: #ebebeb;
+    border-radius: 7px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.15);
+    margin:3px 
 }
 
 
 @media(max-width:361px){
- .section-container{
-    display: flex;
-    flex-wrap: row;
+    .section-container{
+        display: flex;
+        flex-wrap: row;  
+}
 
-    
- }
- .card.imageproducto img{
+.card.imageproducto img{
     box-shadow: 0px 0px 10px rgb(100, 100,100);
     width: 20%;
 }
+
 .header{
     display: none;
-
 }
 
 }
 
 @media(max-width:361px)and (max-width: 769px){
-   .section-container{
+.section-container{
     display: flex;
     flex-wrap: wrap;
+} 
 
-   } 
-   .card.imageproducto img{
-       box-shadow: 0px 0px 10px rgb(100, 100,100);
+.card.imageproducto img{
+    box-shadow: 0px 0px 10px rgb(100, 100,100);
     width: 60%;
-   }
+    }
 }
 
 
 @media(max-width:770px) {
-    .section-container{
-     display: flex;
-     flex-wrap: wrap;
- 
-    } 
-    .card.imageproducto img{
-        box-shadow: 0px 0px 10px rgb(100, 100,100);
-     width: 22%;
-}
+.section-container{
+    display: flex;
+    Flex-wrap: wrap;
+} 
+
+.card.imageproducto img{
+    box-shadow: 0px 0px 10px rgb(100, 100,100);
+    width: 22%;
+    }
 }
