--- a/views/register.html
+++ b/views/register.html
@@ -8,74 +8,75 @@
     <title>Formulario Register</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:wght@300&family=Roboto:wght@100;400&family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:wght@300&family=Roboto:wght@100;400&family=Rubik+Marker+Hatch&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/register.css">
     <script src="https://kit.fontawesome.com/8945ba6e2e.js" crossorigin="anonymous"></script>
 </head>
 
-<header>
-    <!--------- BARRA NAVEGADOR DESKTOP ---------->
-    <div class="interior">
-        <a href="/" class="logo-header-desk1" target="blank">
-            <img src="https://i.postimg.cc/7YbJJNCj/logo-negro.jpg" alt="Logo">
-        </a>
-        <div class="container-busqueda">
-            <input class="bar-busqueda" type="text" placeholder="Buscar">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            
-        </div>
-        <nav class="navegacion">
-            <ul>
-                <li>
-                    <a href="register.html" target="blank">Registrate
-                    <i class="fa-solid fa-id-card"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="login.html" target="blank">Iniciar Sesion
-                    <i class="fa-solid fa-user"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="productCart.html" target="blank">
-                        <i class="fa-solid fa-cart-shopping"></i>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-
-    <div class="interior2">
-        <nav class="navegacion2">
-            <ul>
-                <li>
-                    <a href="" target="blank">Hombres</a>
-                </li>
-                <li>
-                    <a href="" target="blank">Mujeres</a>
-                </li>
-                <li>
-                    <a href="" target="blank">Niños</a>
-                </li>
-                <li class="submenu">
-                    <a href="" target="blank">Productos</a>
-                    <ul class="hijos">
-                        <li><a href="">Reebok</a></li>
-                        <li><a href="">Adidas</a></li>
-                        <li><a href="">Nike</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
 <body>
+    <header>
+        <!--------- BARRA NAVEGADOR DESKTOP ---------->
+        <div class="interior">
+            <a href="/" class="logo-header-desk1" target="blank">
+                <img src="https://i.postimg.cc/7YbJJNCj/logo-negro.jpg" alt="Logo">
+            </a>
+            <div class="container-busqueda">
+                <input class="bar-busqueda" type="text" placeholder="Buscar">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <nav class="navegacion">
+                <ul>
+                    <li>
+                        <a href="register.html" target="blank">Registrate
+                            <i class="fa-solid fa-id-card"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="login.html" target="blank">Iniciar Sesion
+                            <i class="fa-solid fa-user"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="productCart.html" target="blank">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="interior2">
+            <nav class="navegacion2">
+                <ul>
+                    <li>
+                        <a href="" target="blank">Hombres</a>
+                    </li>
+                    <li>
+                        <a href="" target="blank">Mujeres</a>
+                    </li>
+                    <li>
+                        <a href="" target="blank">Niños</a>
+                    </li>
+                    <li class="submenu">
+                        <a href="" target="blank">Productos</a>
+                        <ul class="hijos">
+                            <li><a href="">Reebok</a></li>
+                            <li><a href="">Adidas</a></li>
+                            <li><a href="">Nike</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+
     <main class="main">
         <a href="/">
             <img class="logo" src="https://i.postimg.cc/yxqy1x1f/logo.png" alt="logo-reeadni">
-        </a>        
+        </a>
         <form class="container" action="/" method="POST">
             <h1 class="title">Suscríbete</h1>
             <input class="campo" type="text" placeholder="Nombres">
@@ -103,7 +104,8 @@
 
             <div class="campo_terminos">
                 <input type="checkbox" name="tipousuario" required>
-                <span class="important">Acepto los términos y condiciones</span> <span> y las</span><span class="important"> políticas de privacidad del sitio</span>
+                <span class="important">Acepto los términos y condiciones</span> <span> y las</span><span
+                    class="important"> políticas de privacidad del sitio</span>
             </div>
             <div class="campo_terminos">
                 <input type="checkbox" name="tipousuario" required>
@@ -111,7 +113,7 @@
                     eventos y mucho más</span>
             </div>
             <button class="button" type="submit">Enviar</button>
-            
+
         </form>
     </main>
 </body>
