--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -90,7 +90,7 @@ img {
     width: 100%;
     height: calc(100vh - 8rem);
     top: 8rem;
-    background: rgba(0, 0, 0, .95);
+    background: rgba(0, 0, 0);
     text-align: center;
     transition: all .5s;
 }
@@ -99,13 +99,12 @@ img {
     width: 16rem;
     height: 10rem;
     margin: 0 auto;
-
 }
 
+
 .hamburger_logo:hover {
-    color: var(--color-gris);
+    transform: scale(1.4);
     transition: .6s;
-    border: red solid 0.1rem;
 }
 
 .nav-menu li {
@@ -694,6 +693,14 @@ p {
     padding-left: 2rem;
 }
 
+.acerca-reeadni p{
+    color: var(--color-grisTenue);
+    font-size: 1.2rem;
+    text-align: left;
+    padding-left: 2rem;
+    margin-bottom: 2rem;
+}
+
 .container-icons {
     display: flex;
     width: 50%;
@@ -730,7 +737,15 @@ p {
     font-size: 1.2rem;
     text-align: left;
     padding-left: 2rem;
-    margin-bottom: 4rem;
+    margin-bottom: 1rem;
+}
+
+.terminos-politicas p {
+    color: var(--color-grisTenue);
+    font-size: 1.2rem;
+    text-align: left;
+    padding-left: 2rem;
+    margin-bottom: 2rem;
 }
 
 /*--------------MEDIA QUERIES TABLET---------------------*/
@@ -750,6 +765,14 @@ p {
     .interior2{
         display: none;
     }
+}
+
+@media (max-width: 481px){
+    .acerca-reeadni{
+        display: none;
+    }
+
+
 }
 
 @media (min-width: 481px) {
