--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
             <ul class="nav-menu">
                 <li>
                     <a href="#"></a>
-                    <img class="hamburger_logo" src="https://i.postimg.cc/yxqy1x1f/logo.png" alt="logo_readme">
+                    <img class="hamburger_logo" src="https://i.postimg.cc/nzzF4t8f/logo2-negro.jpg" alt="logo_readme">
                 </li>
                 <li><a class="active" href=#>Mujer</a></li>
                 <li><a href="#">Hombre</a></li>
@@ -546,14 +546,21 @@
             <span class="linea-separadora">--------------------------------------------------------------</span>
             <div>
                 <h1>Acerca de Reeadni</h1>
-                <div class="container-icons">
-                    <i class="fa-brands fa-square-twitter"></i>
-                    <i class="fa-brands fa-square-facebook"></i>
-                    <i class="fa-brands fa-square-youtube"></i>
-                    <i class="fa-brands fa-square-instagram"></i>
+                <div class="acerca-reeadni">
+                    <p>Noticias</p>
+                    <p>Empleos</p>
+                    <p>Inversiones</p>
+                    <p>Sustentabilidad</p>
                 </div>
             </div>
+            <div class="container-icons">
+                <i class="fa-brands fa-square-twitter"></i>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-youtube"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+            </div>
         </section>
+
         <section class="container-ubicacion-derechos">
             <div class="ubicacion">
                 <i class="fa-solid fa-location-dot"></i>
@@ -561,6 +568,8 @@
             </div>
             <div class="derechos-reservados">
                 <p>®2022 Reeadni, Todos los derechos reservados</p>
+            </div>>
+            <div class="terminos-politicas">
                 <p>Terminos de uso</p>
                 <p>Política de privacidad</p>
             </div>
