--- a/views/login.html
+++ b/views/login.html
@@ -59,7 +59,7 @@
                         <a href="" target="blank">Niños</a>
                     </li>
                     <li class="submenu">
-                        <a href="" target="blank">Productos</a>
+                        <a href="productDetail.html" target="blank">Productos</a>
                         <ul class="hijos">
                             <li><a href="">Reebok</a></li>
                             <li><a href="">Adidas</a></li>
