--- a/views/index.html
+++ b/views/index.html
@@ -568,7 +568,7 @@
             </div>
             <div class="derechos-reservados">
                 <p>®2022 Reeadni, Todos los derechos reservados</p>
-            </div>>
+            </div>
             <div class="terminos-politicas">
                 <p>Terminos de uso</p>
                 <p>Política de privacidad</p>
