--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -17,7 +17,7 @@
 <body>
    <header>
       <div class="interior">
-         <a href="" class="logo-header-desk1" target="blank" action="/" method="post">
+         <a href="/" class="logo-header-desk1" target="blank" action="/" method="post">
             <img src="https://i.postimg.cc/7YbJJNCj/logo-negro.jpg" alt="Logo">
          </a>
          <div class="container-busqueda">
